1233 - Add submission approval date

--- a/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
+++ b/src/bcfms/bcfms/pkg/graphs/resource_models/Industry Project Assessment.json
@@ -365,74 +365,74 @@
                             {
                                 "children": [],
                                 "collector": "",
-                                "conceptid": "1ace0a6e-aaef-43fd-9b1a-001240be4cbe",
-                                "id": "b4cf757e-8f9c-44fd-a672-51565113892e",
-                                "sortorder": "",
+                                "conceptid": "4625da90-452f-4195-9695-2cf264851f11",
+                                "id": "b6916d86-ccc4-4b41-9a00-b780bff92a89",
+                                "sortorder": "05",
                                 "text": "Chance Find Protocol"
                             },
                             {
                                 "children": [],
                                 "collector": "",
-                                "conceptid": "323fed5a-d5a0-460d-8fce-b0de176d6558",
-                                "id": "611e2f67-d4bc-4cbb-a03b-c300ea227101",
-                                "sortorder": "",
-                                "text": "Fossil Impact Assessment"
-                            },
-                            {
-                                "children": [],
-                                "collector": "",
-                                "conceptid": "a7f7fdac-970e-4369-a422-f191f4fb160e",
-                                "id": "4d820f5e-7e92-4b7d-909d-7d12a00f04c2",
-                                "sortorder": "",
-                                "text": "Fossil Impact Assessment Plan"
-                            },
-                            {
-                                "children": [],
-                                "collector": "",
-                                "conceptid": "a79aadc6-31bc-48bc-b591-bee9908a7b82",
-                                "id": "e95d139a-ba55-49a8-a5e3-6f0317bf6232",
-                                "sortorder": "",
-                                "text": "Impact Mitigation Final Report"
-                            },
-                            {
-                                "children": [],
-                                "collector": "",
-                                "conceptid": "ce0158fd-37cb-43ab-9e5e-9878d41ee386",
-                                "id": "a729e515-3f0a-4924-a391-313f9ffa0b66",
-                                "sortorder": "",
-                                "text": "Impact Mitigation Plan"
-                            },
-                            {
-                                "children": [],
-                                "collector": "",
-                                "conceptid": "78c5447e-a883-4303-8ca8-1e60f0a0d99a",
-                                "id": "c5cc0119-81f7-40a3-ae90-074a3112e3f9",
-                                "sortorder": "",
-                                "text": "Other Requirement"
-                            },
-                            {
-                                "children": [],
-                                "collector": "",
-                                "conceptid": "c92b8ee9-1a40-436f-97d0-2bf7d534582e",
-                                "id": "be0f2faa-3403-468d-a239-1b89165676d2",
-                                "sortorder": "",
+                                "conceptid": "183a838c-fb4a-4fb5-8a79-3ab196f3747d",
+                                "id": "8886bc67-7fa6-4336-b0aa-9b9d3e240c76",
+                                "sortorder": "10",
                                 "text": "Preliminary Study Report"
                             },
                             {
                                 "children": [],
                                 "collector": "",
-                                "conceptid": "51ba762d-fc73-4737-b70e-2e478a7aa4d6",
-                                "id": "1a2c5799-c08e-453c-a912-d9e1e61d9f4f",
-                                "sortorder": "",
+                                "conceptid": "5164f737-5238-42c6-93d1-5d71674e7fba",
+                                "id": "53b63fe4-f389-49bc-8f48-2319adab1dcc",
+                                "sortorder": "15",
+                                "text": "Fossil Impact Assessment Plan"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "98755434-ba2c-427e-bb60-77b76b26f12f",
+                                "id": "a602de65-7910-4fdf-a619-5d0c50b438ce",
+                                "sortorder": "20",
+                                "text": "Fossil Impact Assessment"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "03b2f74b-83b0-4120-b7a2-238524df0241",
+                                "id": "bab49c27-9e46-4b47-9b5c-79d6c08e8999",
+                                "sortorder": "25",
+                                "text": "Impact Mitigation Plan"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "f6ce9089-de7b-4dc9-b587-38d562bd1b2a",
+                                "id": "5212e27a-a13d-4a0e-bba8-8deda2296a61",
+                                "sortorder": "30",
+                                "text": "Impact Mitigation Final Report"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "edb07ae4-4736-4206-8f4c-c0b72e58e345",
+                                "id": "8f5ce1d6-4eef-4f97-8b5f-3ee568faed11",
+                                "sortorder": "35",
+                                "text": "Site Assessment Plan"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "ca12865a-33b3-473d-b382-fabd94b262f0",
+                                "id": "0eaf1752-8601-486c-b64c-5c243f1de3d4",
+                                "sortorder": "40",
                                 "text": "Site Assessment Final Report"
                             },
                             {
                                 "children": [],
                                 "collector": "",
-                                "conceptid": "657ffcc2-a69e-4182-a0a4-5f77f3b1131d",
-                                "id": "fa0ee175-e5d4-49f6-a26d-c068edec65f9",
-                                "sortorder": "",
-                                "text": "Site Assessment Plan"
+                                "conceptid": "92363280-0977-4745-81eb-9619566ed7a7",
+                                "id": "d4faeb9f-1a07-4593-97db-d8ae8347b929",
+                                "sortorder": "45",
+                                "text": "Other Requirement"
                             }
                         ],
                         "placeholder": {
@@ -703,6 +703,14 @@
                                 "id": "639f5a40-cd22-4b36-98b5-2c90a0eee308",
                                 "sortorder": "",
                                 "text": "not required"
+                            },
+                            {
+                                "children": [],
+                                "collector": "",
+                                "conceptid": "b60b4e1f-54e2-4683-886f-ccca701a6dd1",
+                                "id": "73ca3b70-1bf5-4870-879c-c3f8c6726931",
+                                "sortorder": "",
+                                "text": "to be determined"
                             }
                         ],
                         "placeholder": {
@@ -1873,6 +1881,25 @@
                     "sortorder": 4,
                     "visible": true,
                     "widget_id": "10000000-0000-0000-0000-000000000001"
+                },
+                {
+                    "card_id": "65cc00ec-dc5e-11ef-93b5-0242ac170009",
+                    "config": {
+                        "defaultValue": "Date of Data Entry",
+                        "label": "FMO Approval Date",
+                        "maxDate": false,
+                        "minDate": false,
+                        "placeholder": "Enter date",
+                        "viewMode": "days"
+                    },
+                    "id": "e43d5c68-1c7f-4dfc-ac1d-4a31bdc2a113",
+                    "label": {
+                        "en": "FMO Approval Date"
+                    },
+                    "node_id": "f35368ec-ef46-11ef-a897-0242ac170007",
+                    "sortorder": 2,
+                    "visible": true,
+                    "widget_id": "10000000-0000-0000-0000-000000000004"
                 }
             ],
             "color": "rgba(53,151,143,1)",
@@ -2500,6 +2527,15 @@
                     "name": null,
                     "ontologyproperty": "http://www.cidoc-crm.org/cidoc-crm/P117i_includes",
                     "rangenode_id": "65cbfe76-dc5e-11ef-93b5-0242ac170009"
+                },
+                {
+                    "description": null,
+                    "domainnode_id": "65cc072c-dc5e-11ef-93b5-0242ac170009",
+                    "edgeid": "d698375c-6769-4f6d-8655-1a29120b76ea",
+                    "graph_id": "a237a6dc-dc5c-11ef-80ef-0242ac170009",
+                    "name": null,
+                    "ontologyproperty": "http://www.ics.forth.gr/isl/CRMdig/L54_is_same-as",
+                    "rangenode_id": "f35368ec-ef46-11ef-a897-0242ac170007"
                 },
                 {
                     "description": null,
@@ -4733,6 +4769,29 @@
                     "sourcebranchpublication_id": null
                 },
                 {
+                    "alias": "fmo_approval_date",
+                    "config": {
+                        "dateFormat": "YYYY-MM-DD"
+                    },
+                    "datatype": "date",
+                    "description": null,
+                    "exportable": false,
+                    "fieldname": null,
+                    "graph_id": "a237a6dc-dc5c-11ef-80ef-0242ac170009",
+                    "hascustomalias": false,
+                    "is_collector": false,
+                    "isrequired": false,
+                    "issearchable": true,
+                    "istopnode": false,
+                    "name": "FMO Approval Date",
+                    "nodegroup_id": "65cbfe76-dc5e-11ef-93b5-0242ac170009",
+                    "nodeid": "f35368ec-ef46-11ef-a897-0242ac170007",
+                    "ontologyclass": "http://www.cidoc-crm.org/cidoc-crm/E50_Date",
+                    "parentproperty": "http://www.ics.forth.gr/isl/CRMdig/L54_is_same-as",
+                    "sortorder": 0,
+                    "sourcebranchpublication_id": null
+                },
+                {
                     "alias": "other_requirement_details",
                     "config": {
                         "en": ""
@@ -4760,8 +4819,8 @@
             "publication": {
                 "graph_id": "a237a6dc-dc5c-11ef-80ef-0242ac170009",
                 "notes": null,
-                "publicationid": "fbb1e57e-ef44-11ef-89ba-0242ac170007",
-                "published_time": "2025-02-20T04:41:43.132"
+                "publicationid": "231272bc-ef47-11ef-a897-0242ac170007",
+                "published_time": "2025-02-20T04:57:08.190"
             },
             "relatable_resource_model_ids": [],
             "resource_2_resource_constraints": [],
